--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     ]
   },
   "angularCompilerOptions": {
-    "strictInjectionParameters": true,
+    "strictInjectionParameters": false,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
